<resources>
    <string name="app_name">HealthyLife</string>
    <string name="menu_cal">BMI计算器</string>
    <string name="menu_que">健康问卷调查</string>
    <string name="menu_tips">小贴士</string>
    <string name="login_title">用户登录</string>
    <string name="id_hint">此处输入用户名</string>
    <string name="password_hint">此处输入密码</string>
    <string name="register">注册</string>
    <string name="login">登录</string>
    <string name="clear">清空</string>
    <string name="user_register">新用户注册</string>
    <string name="id_register">用户名：</string>
    <string name="password_register">密码：</string>
    <string name="email_address">邮箱地址：</string>
    <string name="user_gender">选择性别</string>
    <string name="male">♂</string>
    <string name="female">♀</string>
    <string name="submit">提交</string>
    <string name="title_activity_register">RegisterActivity</string>
    <string name="reset">修改密码</string>
    <string name="exit">退出</string>
    <string name="rememberPassword">记住密码</string>
    <string name="auto_login">自动登录</string>
    <string name="origin_password">原密码：</string>
    <string name="hint_origin">请输入原来的密码</string>
    <string name="new_password">新密码：</string>
    <string name="hint_new1">请输入新密码</string>
    <string name="hint_confirmPassword">请确认你的密码</string>
    <string name="calculate">点击进入健康状况调查</string>
</resources>
