<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="16dp"
    android:layout_marginTop="18dp"
    tools:context=".MainActivity">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="20dp"
        android:textAppearance="@android:style/TextAppearance.Large"
        android:text="@string/login_title"
        android:textSize="32sp" />

    <EditText
        android:id="@+id/user_id"
        android:inputType="text"
        android:hint="@string/id_hint"
        android:layout_marginTop="20dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <EditText
        android:id="@+id/user_password"
        android:inputType="textPassword"
        android:hint="@string/password_hint"
        android:layout_marginTop="20dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <CheckBox
        android:layout_marginTop="16dp"
        android:text="@string/rememberPassword"
        android:textColor="#000000"
        android:id="@+id/cb_rememberPassword"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />

    <CheckBox
        android:textColor="#000000"
        android:text="@string/auto_login"
        android:id="@+id/cb_auto"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />

    <Button
        android:id="@+id/register"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="20dp"
        android:text="@string/register"
        android:onClick="onClickRegister"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />

    <Button
        android:id="@+id/login"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="20dp"
        android:text="@string/login"
        android:onClick="onClickLogin"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />

    <Button
        android:id="@+id/clear"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="20dp"
        android:text="@string/clear"
        android:onClick="onClickClear"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />

</LinearLayout>