<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:padding="16dp"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".RegisterActivity">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="20dp"
            android:text="@string/user_register"
            android:textAppearance="@android:style/TextAppearance.Large"
            android:textSize="32sp" />

        <RelativeLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingTop="16dp">

            <TextView
                android:id="@+id/tv_id"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/id_register"
                android:textStyle="bold" />

            <EditText
                android:id="@+id/register_id"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_toEndOf="@id/tv_id"
                android:layout_toRightOf="@id/tv_id"
                android:inputType="text" />
        </RelativeLayout>

        <RelativeLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingTop="16dp">

            <TextView
                android:id="@+id/tv_password"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/password_register"
                android:maxLength="10"
                android:textStyle="bold" />

            <EditText
                android:id="@+id/register_password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_toEndOf="@id/tv_password"
                android:layout_toRightOf="@id/tv_password"
                android:inputType="textPassword" />
        </RelativeLayout>

        <RelativeLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingTop="16dp">

            <TextView
                android:id="@+id/tv_email"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/email_address"
                android:textStyle="bold" />

            <EditText
                android:id="@+id/email_address"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_toEndOf="@id/tv_email"
                android:layout_toRightOf="@id/tv_email"
                android:inputType="textWebEmailAddress" />
        </RelativeLayout>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:text="@string/user_gender"
            android:textStyle="bold" />

        <RadioGroup
            android:id="@+id/radioGroup_gender"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">

            <RadioButton
                android:id="@+id/checkbox_male"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:checked="true"
                android:text="@string/male"
                android:textSize="32sp"/>

            <RadioButton
                android:id="@+id/checkbox_female"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/female"
                android:textSize="32sp"/>
        </RadioGroup>

        <Button
            android:id="@+id/btn_submit"
            android:text="@string/submit"
            android:onClick="onClickSubmit"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="20dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

        <Button
            android:id="@+id/register_clear"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="20dp"
            android:text="@string/clear"
            android:onClick="onClickClear"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

</LinearLayout>